added action screen

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -6,4 +6,9 @@ $light-blue: #B2DAFF;
 $dark-grey: #6B6B6B;
 $orange: #e47605;
 $green: #1d9703;
-$yellow: #FFFE94
+$yellow: #FFFE94;
+
+$break-xs: 320px; //iphone 5
+$break-sm: 375px; //iphone x
+$break-md: 1024px; //ipad pro 
+$break-lg: 1200px;  
