--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -7,6 +7,18 @@
     left: 0;
     overflow-x: hidden;
 
+    &.replenishment{
+        background-color: $green;
+    }
+
+    &.adjustments{
+        background-color: $orange;
+    }
+
+    &.psa{
+        background-color: $primary;
+    }
+
     .link {
         height: 57px;
         width: 56px;
