--- a/src/styles/containers/app.scss
+++ b/src/styles/containers/app.scss
@@ -1,5 +1,5 @@
 .app {
-  margin: 57px 0px 0px 0px;
+  margin: 57px 1px 0px 0px;
   overflow-x: hidden;
 
   .page-header {
@@ -7,5 +7,6 @@
     height: 56px;
     line-height: 56px;
     text-align:center;
+    font-size: 30px;
   }
 }
