made style changes to accomodate handheld small screen resolution

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -12,3 +12,16 @@ $break-xs: 320px; //iphone 5
 $break-sm: 375px; //iphone x
 $break-md: 1024px; //ipad pro 
 $break-lg: 1200px;  
+
+$header-min: 2.125em;
+$header: 3.750em;
+
+$header-font:  1em;
+$header-font-mid: 0.625em;
+$header-font-min: .23em;
+
+$menu-button-height-min: 1.625em;
+$menu-button-height: 2.625em;
+
+$one_unit: 0.063em;
+
