--- a/src/styles/components/menuButton.scss
+++ b/src/styles/components/menuButton.scss
@@ -1,8 +1,8 @@
 .menu-btn {
-    width:100%;
-    height: 2.9em;
-    margin: 0px 0px 3px 0px;
-    background-color: $secondary;
-    color: #434343;
-    border-radius: .02em;
+    // width:100%;
+    // height: 2.9em;
+    // margin: 0px 0px 3px 0px;
+    // background-color: $secondary;
+    // color: #434343;
+    // border-radius: .02em;
 }
