--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,17 +1,14 @@
-@import './colors';
+@import '_globals';
+@import '_actionsScreen';
+@import '_mainMenu';
+@import '_index';
+
 
 @import './containers/app';
-@import './containers/mainMenu';
 @import './containers/storeWalk';
-// @import './containers/actionsScreen.scss';
-
 @import './components/header';
-@import './components/sidebar';
 @import './components/footer';
+@import './components/sidebar';
 @import './components/menuButton';
 @import './components/tabSection';
 
-@import '_actionsScreen';
-@import '_globals';
-
-@import './index';
