updated unified store walk container

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -17,7 +17,7 @@ $header-min: 2.125em;
 $header: 3.750em;
 
 $header-font:  1em;
-$header-font-mid: 0.625em;
+$header-font-mid: 0.8em;
 $header-font-min: .23em;
 
 $menu-button-height-min: 1.625em;
@@ -25,3 +25,10 @@ $menu-button-height: 2.625em;
 
 $one_unit: 0.063em;
 
+$header-svg-size: 1.5em;
+$header-svg-size-min: 2em;
+$header-logo-size: 1.563em;
+$header-logo-size-min: 0.625em;
+
+$front: 500;
+$back:-1;
