--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -7,6 +7,7 @@
     left: 0;
     overflow-x: hidden;
     border-right: 1px solid $background;
+    padding-top: $header;
 
     &.replenishment{
         background-color: $green;
@@ -20,31 +21,19 @@
         background-color: $primary;
     }
 
-    .link {
+    .new-link{
+        background-color:$orange;
         height: $header;
         width: $header;
-        border-bottom: 1px solid $background;
-        margin-right: 0px;
-        
-        &.top {
-            background-color: $primary
-        }
-
-        &.btm {
-            background-color: $primary;
-            border-bottom: none;
-            border-top: 1px solid $background;
-            position: fixed;
-            bottom: 0px;
-        }
-
-        @media (max-width:$break-sm){
-            width: $header-min;
-            height: $header-min;
-        }
     }
 
-    @media (max-width:$break-sm){
+
+    @media (max-width:$break-xs){
+        padding-top: $header-min;
         width: $header-min;
+
+        .new-link {
+            height: $header-min;
+        }
     }
 }
