--- a/src/styles/containers/storeWalk.scss
+++ b/src/styles/containers/storeWalk.scss
@@ -1,3 +1,41 @@
 .store-walk {
-  margin: 0px 1px 1px 57px;
+  margin-left: $header;
+
+  .page-header {
+    line-height: $header;
+    height: $header;
+    text-align: center;
+    font-size: $header-font;
+    color: $dark-grey;
+  }
+
+  button {
+    background-color: $primary;
+    width: 100%;
+    height: $header;
+    margin: .5em;
+    font-weight:bold;
+    letter-spacing: 0.1em;
+  }
+
+
+  @media (max-width:$break-xs){
+    margin-left: $header-min;
+
+    .page-header {
+      font-size: $header-font-min;
+    }
+
+    .page-header {
+      line-height: $header-min;
+      height: $header-min;
+    }
+
+    button {
+      font-size: $header-font-min;
+      height: 3em;
+    }
+
+
+  }
 }
