--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,12 +2,12 @@
 @import '_actionsScreen';
 @import '_mainMenu';
 @import '_index';
+@import './components/_header';
+@import './components/_footer';
 
 
 @import './containers/app';
 @import './containers/storeWalk';
-@import './components/header';
-@import './components/footer';
 @import './components/sidebar';
 @import './components/menuButton';
 @import './components/tabSection';
