--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,13 +2,11 @@
 @import '_actionsScreen';
 @import '_mainMenu';
 @import '_index';
+@import '_storeWalk';
 @import './components/_header';
 @import './components/_footer';
 
 
-@import './containers/app';
-@import './containers/storeWalk';
 @import './components/sidebar';
-@import './components/menuButton';
 @import './components/tabSection';
 
