--- a/src/styles/_actionsScreen.scss
+++ b/src/styles/_actionsScreen.scss
@@ -1,81 +1,97 @@
 .action-screen{
-  border: 1px solid black;
-  margin-left: 57px;
+  margin-top: $header;
+  margin-left: $header;
+  margin-bottom: $header + 1em;
 
-  form {
-    margin-top:10px;
-    border:1px solid black;
-
-    button {
-      padding-left: 30px;
-      padding-right: 30px;
-      background-color: $primary;
-      color: $secondary;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      font-weight:500;
-    }
-
-    input{
-      height: 45px;
-      display: inline-block;
-      width: fit-content;
-      
-      &.highlight{
-        background-color: $yellow;
-      }
-    }
+  .page-header {
+    line-height: $header;
+    height: $header;
+    text-align: center;
+    font-size: $header-font;
+    color: $dark-grey;
   }
+
 
   .tab-section{
     margin-top:15px
   }
 
-  table {
-    margin-bottom:1px;
+  form {
+    display: flex;
+    button {
+      background-color: $primary;
+      color: $secondary;
+      font-weight:500;
+      height: 3.125em;
+    }
+
+    input{
+      height: 3.125em;
+      font-weight:500;
+    }
   }
 
-  th{
-    background-color:$light-blue;
-    color: $dark-grey;
+  .action-btn {
+    margin-top: 10em;
+    width: inherit;
+    background-color: $dark-grey;
+    border: none;
+
+    &.replenishment{
+      background-color: $replenishment;
+    }
+
+    &.adjustments{
+      background-color: $adjustments;
+    }
 
     &.psa{
-      background-color:$primary;
-      color: $secondary;
-      font-weight: 500;
+      background-color: $psa;
+    }
+
+
+  }
+
+  table{
+    margin-bottom:0.063em;
+
+    th {
+      background-color:$light-blue;
+      color: $dark-grey;
+      &.psa{
+        background-color:$primary;
+        color: $secondary;
+        font-weight: 500;
+      }
+    }
+
+    td{
+      background-color: $secondary;
+      color: $dark-grey;
     }
   }
 
-  td{
-    background-color: $secondary;
-    color: $dark-grey;
-  }
 
-  button{
-    &.action{
-      // position:absolute;
-      // bottom:0;
-      width:100%; 
-      height: 50px;
-      border-radius: 3px;
-      font-weight: 500;
-      background-color: $dark-grey;
-      padding: 1px 2px 1px 2px;
+  @media (max-width:$break-xs){
+    margin-left: $header-min;
+    margin-bottom: $header-min + .5em;
+    margin-top: $header-min;
 
-      &.orange{
-        background-color: $orange;
-      }
-
-      &.green{
-        background-color: $green;
-      }
-
-      .label{
-        font-weight:500;
-        font-size: 18px;
-        text-align:center;
-      }
-
+    .page-header {
+      font-size: $header-font-min;
     }
-  }
+     
+    form {
+      button,input {
+        font-size: $header-font-min;
+      }
+    }
+    th,td {
+      padding: .3rem;
+    }
+
+    .action-btn {
+      font-size: $header-font-min;
+    }
+  }  
 }
