--- a/src/styles/_mainMenu.scss
+++ b/src/styles/_mainMenu.scss
@@ -1,25 +1,26 @@
 .main-menu {
-  // margin-top: $header;
+  margin-top: $header;
   margin-bottom: $header;
   margin-left: $one-unit;
   margin-right: $one-unit;
 
 
   .menu-btn{
-    // height: $menu-button-height;
     background-color: $secondary;
-    color: #434343;
+    color: $dark-grey;
     width:100%;
     border-radius: .02em;
-    // margin: $one-unit;
+    margin-top: $one-unit;
+    margin-bottom: $one-unit;
+    border: none;
+    font-weight: 500;
   }
 
   @media (max-width:$break-xs){
-    // margin-top: $header-min;
+    margin-top: $header-min;
     margin-bottom: $header-min;
 
     .menu-btn{
-      height: $menu-button-height-min;
       font-size: 10px;
     }
 
