--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -6,8 +6,13 @@
     top: 0;
     left: 0;
     overflow-x: hidden;
-    border-right: 1px solid $background;
     padding-top: $header;
+    
+    svg {
+        color: $secondary;
+        height: $header-svg-size;
+        width: $header-svg-size;
+    }
 
     &.replenishment{
         background-color: $green;
@@ -25,6 +30,10 @@
         background-color:$orange;
         height: $header;
         width: $header;
+        line-height: $header;
+        height: $header;
+
+        
     }
 
 
@@ -34,6 +43,7 @@
 
         .new-link {
             height: $header-min;
+            width: $header-min;
         }
     }
 }
