--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @import '_storeWalk';
 @import './components/_header';
 @import './components/_footer';
+@import './components/_floatingAction';
 
 
 @import './components/sidebar';
