added styling to table and sidebar

--- a/src/styles/_storeWalk.scss
+++ b/src/styles/_storeWalk.scss
@@ -2,6 +2,10 @@
   margin-top: $header;
   // margin-left: $header;
 
+  .bottom-row {
+    margin-bottom: 10em;
+  }
+
   .page-header {
     line-height: $header;
     height: $header;
