--- a/src/styles/_actionsScreen.scss
+++ b/src/styles/_actionsScreen.scss
@@ -1,6 +1,6 @@
 .action-screen{
   margin-top: $header;
-  // margin-left: $header;
+  margin-left: $header;
   margin-bottom: $header + 1em;
 
   .page-header {
@@ -32,7 +32,6 @@
   }
 
   .action-btn {
-    // margin-top: 10em;
     margin-top: .3em;
     margin-bottom: 3em;
     font-size: 2em;
@@ -50,6 +49,22 @@
 
     &.psa{
       background-color: $psa;
+    }
+
+    #overlay-action-btn {
+        position: absolute;
+        background-color:rgba(255,255,255, .2);
+        /*dim the background*/
+        margin-top: .4em;
+        margin-left: .58em;
+        margin-right: .56em;
+        top:0;
+        left:0;
+        width: -webkit-fill-available;
+        height:20%;
+        color:black;
+        text-align: center;
+        border-radius: .1em;
     }
 
 
@@ -76,7 +91,7 @@
 
 
   @media (max-width:$break-xs){
-    // margin-left: $header-min;
+    margin-left: $header-min;
     margin-bottom: $header-min + .5em;
     margin-top: $header-min;
 
@@ -96,6 +111,14 @@
     .action-btn {
       font-size: $header-font-min;
       margin-bottom: 8em;
+
+      #overlay-action-btn {
+        margin-top: .6em;
+        margin-left: 2em;
+        margin-right: 2em;
+        height:12%;
+        border-radius: .25em;
+    }
     }
   }  
 }
