--- a/src/styles/_actionsScreen.scss
+++ b/src/styles/_actionsScreen.scss
@@ -1,6 +1,5 @@
 .action-screen{
-  margin-top: $header;
-  margin-left: $header;
+  margin-top: $header + 2em;
   margin-bottom: $header + 1em;
 
   .page-header {
@@ -9,11 +8,6 @@
     text-align: center;
     font-size: $header-font;
     color: $dark-grey;
-  }
-
-
-  .tab-section{
-    margin-top:15px
   }
 
   form {
@@ -29,6 +23,51 @@
       height: 3.125em;
       font-weight:500;
     }
+  }
+
+  .tab-section{
+    margin-top: 1em;
+  }
+
+  .alert {
+    margin-top: 1em;
+    margin-bottom: 0em;
+  }
+
+  table{
+    margin-bottom:0.063em;
+
+    th {
+      background-color:$light-blue;
+      color: $dark-grey;
+
+      &.psa{
+        background-color:$primary;
+        color: $secondary;
+        font-weight: 500;
+      }
+    }
+
+    td{
+      background-color: $secondary;
+      color: $dark-grey;
+    }
+  }
+
+  #overlay-action-btn {
+    position: absolute;
+    background-color:rgba(255,255,255, .2);
+    /*dim the background*/
+    margin-top: .4em;
+    margin-left: .58em;
+    margin-right: .56em;
+    top:0;
+    left:0;
+    width: -webkit-fill-available;
+    height:20%;
+    color:black;
+    text-align: center;
+    border-radius: .1em;
   }
 
   .action-btn {
@@ -50,63 +89,11 @@
     &.psa{
       background-color: $psa;
     }
-
-    #overlay-action-btn {
-        position: absolute;
-        background-color:rgba(255,255,255, .2);
-        /*dim the background*/
-        margin-top: .4em;
-        margin-left: .58em;
-        margin-right: .56em;
-        top:0;
-        left:0;
-        width: -webkit-fill-available;
-        height:20%;
-        color:black;
-        text-align: center;
-        border-radius: .1em;
-    }
-
-
   }
-
-  table{
-    margin-bottom:0.063em;
-
-    th {
-      background-color:$light-blue;
-      color: $dark-grey;
-      &.psa{
-        background-color:$primary;
-        color: $secondary;
-        font-weight: 500;
-      }
-    }
-
-    td{
-      background-color: $secondary;
-      color: $dark-grey;
-    }
-  }
-
 
   @media (max-width:$break-xs){
-    margin-left: $header-min;
-    margin-bottom: $header-min + .5em;
-    margin-top: $header-min;
-
-    .page-header {
-      font-size: $header-font-min;
-    }
-     
-    form {
-      button,input {
-        font-size: $header-font-min;
-      }
-    }
-    th,td {
-      padding: .3rem;
-    }
+    margin-bottom: $header-min + 1em;
+    margin-top: $header-min + 1.9em;
 
     .action-btn {
       font-size: $header-font-min;
@@ -118,7 +105,62 @@
         margin-right: 2em;
         height:12%;
         border-radius: .25em;
+      }
     }
+
+    th,td {
+      padding: .3rem;
     }
-  }  
+
+    .page-header, .alert {
+      font-size: $header-font-min;
+    }
+
+    form {
+      button,input {
+        font-size: $header-font-min;
+      }
+    }
+  }
+}
+
+.sub-header {
+  // padding-left: .5em;
+  position: fixed;
+  top: $header;
+  background-color:rgba(228, 118, 5, 1);
+  left: 0;
+  right: 0;
+  z-index: $front;
+
+  button{
+    padding-left: 1.2em;
+    background-color: $orange;
+    border:none;
+    border-right: 1px solid $background;
+  }
+
+  svg {
+    height: 2em;
+    width: 2em;
+    padding: .2em;
+    color: $secondary;
+    margin-right: 1em;
+  }
+
+  @media (max-width:$break-xs){
+    top: $header-min;
+    padding-left: 0;
+
+    button{
+      padding-left: .9em;
+    }
+
+    svg {
+      padding: 0em;
+      height: 1em;
+      width: 1em;
+      margin-right: .5em;
+    }
+  }
 }
