--- a/src/styles/components/_floatingAction.scss
+++ b/src/styles/components/_floatingAction.scss
@@ -19,6 +19,31 @@
 
   svg{
     height: 2em;
+    width:2em;
+  }
+}
+
+#floating-action-two{
+  background-color: $primary;
+  color:$secondary;
+  position: fixed;
+  bottom: 0;
+  right:0;
+  margin-bottom: 10em;
+  margin-right: .5em;
+  border-radius: 2em;
+  height: 4em;
+  width: 4em;
+  z-index: $front;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.4);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+
+  svg{
+    height: 2em;
     width: 2em;
   }
 }
@@ -56,6 +81,17 @@
     height: 3em;
     width: 3em;
     margin-bottom: 2.5em;
+
+    svg{
+      height: 1.5em;
+      width: 1.5em;
+    }
+  }
+
+  #floating-action-two{
+    height: 3em;
+    width: 3em;
+    margin-bottom: 6em;
 
     svg{
       height: 1.5em;
