--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,7 @@
 @import './components/_header';
 @import './components/_footer';
 @import './components/_floatingAction';
-
+@import './components/_toast';
 
 @import './components/sidebar';
 @import './components/tabSection';
