--- a/src/styles/_actionsScreen.scss
+++ b/src/styles/_actionsScreen.scss
@@ -91,6 +91,11 @@
     }
   }
 
+  .psa-header, .psa-data {
+    padding-left: 4px;
+    padding-right: 4px;
+  }
+
   @media (max-width:$break-xs){
     margin-bottom: $header-min + 1em;
     margin-top: $header-min + 1.9em;
