Clean up formatting, add prettierrc

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -1,25 +1,25 @@
-$primary: #0A57BA;
-$alt-blue: #022B96;
-$secondary: #FFFFFF;
-$background: #EAEAEA;
-$light-blue: #B2DAFF;
-$dark-grey: #6B6B6B;
+$primary: #0a57ba;
+$alt-blue: #022b96;
+$secondary: #ffffff;
+$background: #eaeaea;
+$light-blue: #b2daff;
+$dark-grey: #6b6b6b;
 $orange: #e47605;
 $green: #1d9703;
-$yellow: #FFFE94;
-$purple: #9400D3;
+$yellow: #fffe94;
+$purple: #9400d3;
 
 $break-xs: 320px; //iphone 5
 $break-sm: 375px; //iphone x
-$break-md: 1024px; //ipad pro 
-$break-lg: 1200px;  
+$break-md: 1024px; //ipad pro
+$break-lg: 1200px;
 
 $header-min: 2.125em;
-$header: 3.750em;
+$header: 3.75em;
 
-$header-font:  1em;
+$header-font: 1em;
 $header-font-mid: 0.8em;
-$header-font-min: .23em;
+$header-font-min: 0.23em;
 
 $menu-button-height-min: 1.625em;
 $menu-button-height: 2.625em;
@@ -32,7 +32,7 @@ $header-logo-size: 1.563em;
 $header-logo-size-min: 0.625em;
 
 $front: 500;
-$back:-1;
+$back: -1;
 
 $replenishment: $green;
 $adjustments: $orange;
