--- a/src/styles/_actionsScreen.scss
+++ b/src/styles/_actionsScreen.scss
@@ -1,4 +1,4 @@
-.action-screen{
+.action-screen {
   margin-top: $header + 2em;
   margin-bottom: $header + 1em;
 
@@ -15,17 +15,17 @@
     button {
       background-color: $primary;
       color: $secondary;
-      font-weight:500;
+      font-weight: 500;
       height: 3.125em;
     }
 
-    input{
+    input {
       height: 3.125em;
-      font-weight:500;
+      font-weight: 500;
     }
   }
 
-  .tab-section{
+  .tab-section {
     margin-top: 1em;
   }
 
@@ -34,21 +34,21 @@
     margin-bottom: 0em;
   }
 
-  table{
-    margin-bottom:0.063em;
+  table {
+    margin-bottom: 0.063em;
 
     th {
-      background-color:$light-blue;
+      background-color: $light-blue;
       color: $dark-grey;
 
-      &.psa{
-        background-color:$primary;
+      &.psa {
+        background-color: $primary;
         color: $secondary;
         font-weight: 500;
       }
     }
 
-    td{
+    td {
       background-color: $secondary;
       color: $dark-grey;
     }
@@ -56,47 +56,48 @@
 
   #overlay-action-btn {
     position: absolute;
-    background-color:rgba(255,255,255, .2);
+    background-color: rgba(255, 255, 255, 0.2);
     /*dim the background*/
-    margin-top: .4em;
-    margin-left: .58em;
-    margin-right: .56em;
-    top:0;
-    left:0;
+    margin-top: 0.4em;
+    margin-left: 0.58em;
+    margin-right: 0.56em;
+    top: 0;
+    left: 0;
     width: -webkit-fill-available;
-    height:20%;
-    color:black;
+    height: 20%;
+    color: black;
     text-align: center;
-    border-radius: .1em;
+    border-radius: 0.1em;
   }
 
   .action-btn {
-    margin-top: .3em;
+    margin-top: 0.3em;
     margin-bottom: 3em;
     font-size: 2em;
     width: inherit;
     background-color: $dark-grey;
     border: none;
 
-    &.replenishment{
+    &.replenishment {
       background-color: $replenishment;
     }
 
-    &.adjustments{
+    &.adjustments {
       background-color: $adjustments;
     }
 
-    &.psa{
+    &.psa {
       background-color: $psa;
     }
   }
 
-  .psa-header, .psa-data {
+  .psa-header,
+  .psa-data {
     padding-left: 4px;
     padding-right: 4px;
   }
 
-  @media (max-width:$break-xs){
+  @media (max-width: $break-xs) {
     margin-bottom: $header-min + 1em;
     margin-top: $header-min + 1.9em;
 
@@ -105,24 +106,27 @@
       margin-bottom: 8em;
 
       #overlay-action-btn {
-        margin-top: .6em;
+        margin-top: 0.6em;
         margin-left: 2em;
         margin-right: 2em;
-        height:12%;
-        border-radius: .25em;
+        height: 12%;
+        border-radius: 0.25em;
       }
     }
 
-    th,td {
-      padding: .3rem;
+    th,
+    td {
+      padding: 0.3rem;
     }
 
-    .page-header, .alert {
+    .page-header,
+    .alert {
       font-size: $header-font-min;
     }
 
     form {
-      button,input {
+      button,
+      input {
         font-size: $header-font-min;
       }
     }
@@ -133,7 +137,7 @@
   // padding-left: .5em;
   position: fixed;
   top: $header;
-  background-color:rgba(228, 118, 5, 1);
+  background-color: rgba(228, 118, 5, 1);
   left: 0;
   right: 0;
   z-index: $front - 1;
@@ -146,16 +150,16 @@
     background-color: $purple;
   }
 
-  button{
+  button {
     padding-left: 1.2em;
     background-color: $orange;
-    border:none;
+    border: none;
     border-right: 1px solid $background;
 
     &.replenishment {
       background-color: $green;
     }
-  
+
     &.psa {
       background-color: $purple;
     }
@@ -164,24 +168,24 @@
   svg {
     height: 2em;
     width: 2em;
-    padding: .2em;
+    padding: 0.2em;
     color: $secondary;
     margin-right: 1em;
   }
 
-  @media (max-width:$break-xs){
+  @media (max-width: $break-xs) {
     top: $header-min;
     padding-left: 0;
 
-    button{
-      padding-left: .9em;
+    button {
+      padding-left: 0.9em;
     }
 
     svg {
       padding: 0em;
       height: 1em;
       width: 1em;
-      margin-right: .5em;
+      margin-right: 0.5em;
     }
   }
 }
