--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,98 +1,97 @@
 .navbar {
+  background-color: $primary;
+  color: white;
+  height: $header;
+  font-size: $header-font;
+  font-weight: 500;
+  padding-left: 0px;
+  padding-right: 0px;
+  z-index: $front;
+
+  .dropdown-item {
+    background-color: $secondary;
+    color: $dark-grey;
+  }
+
+  svg {
+    height: $header-svg-size;
+    width: $header-svg-size;
+  }
+
+  img {
+    height: 1.3em;
+    margin-right: 0px !important;
+    margin-bottom: 0.125em;
+  }
+
+  button,
+  a {
     background-color: $primary;
-    color:white;
+    border: none;
+    outline: none;
+  }
+
+  .menu-toggle {
+    margin-bottom: 0.15em;
+  }
+
+  .menu-toggle-item {
+    width: $header;
+    text-align: center;
+  }
+
+  .nav-title {
     height: $header;
-    font-size: $header-font;
-    font-weight: 500;
-    padding-left:0px;
-    padding-right:0px;
-    z-index: $front;
-    
-    .dropdown-item{
-        background-color: $secondary;
-        color: $dark-grey;
+    line-height: $header;
+  }
+
+  .nav-item {
+    margin: 0px;
+    background-color: $primary;
+
+    &.main {
+      margin-left: 0.5em;
+    }
+  }
+
+  .title-text {
+    display: inline-block;
+    overflow: hidden;
+  }
+
+  @media (max-width: $break-xs) {
+    font-size: $header-font-min;
+
+    a {
+      padding: 0px;
+      margin-bottom: 0.2em;
     }
 
-    svg {
-        height: $header-svg-size;
-        width: $header-svg-size;
-    }
-
-    img{
-        height: 1.3em;
-        margin-right: 0px !important;
-        margin-bottom: 0.125em;
-    }
-    
-    button, a  {
-        background-color: $primary;
-        border: none;
-        outline:none;
-    }
-
+    .logout-svg,
     .menu-toggle {
-        margin-bottom: .15em;
+      height: 1em;
+      width: 1em;
     }
 
-    .menu-toggle-item {
-        width: $header;
-        text-align:center;
+    .logo-item {
+      width: 40px;
     }
 
-    .nav-title{
-        height: $header;
-        line-height: $header;
+    .dropdown-toggle {
+      padding-bottom: 0px;
+      padding-left: 0px;
+      padding-top: 0px;
     }
 
-    .nav-item {
-        margin:0px;
-        background-color: $primary;
-
-        &.main{
-            margin-left:.5em;
-        }
+    .signout-btn {
+      padding-bottom: 0px;
+      padding-top: 0px;
+      margin-bottom: 0.25em;
     }
 
-    .title-text {
-        display: inline-block;
-        overflow: hidden;
+    a {
+      font-size: $header-font-mid;
+      margin-left: 1em;
     }
-
-    @media (max-width:$break-xs){
-        font-size: $header-font-min;
-
-        a{
-            padding: 0px;
-            margin-bottom: .2em;
-        }
-
-        .logout-svg, .menu-toggle{
-            height: 1em;
-            width: 1em;
-        }
-
-        .logo-item{
-            width:40px
-        }
-
-        .dropdown-toggle{
-            padding-bottom:0px;
-            padding-left:0px;
-            padding-top:0px;
-
-        }
-
-        .signout-btn{
-            padding-bottom: 0px;
-            padding-top: 0px;
-            margin-bottom:0.250em;
-        }
-
-
-            a {
-                font-size: $header-font-mid;
-                margin-left: 1em;
-            }
-    
-    }
+  }
 }
