--- a/src/styles/components/_toast.scss
+++ b/src/styles/components/_toast.scss
@@ -3,7 +3,7 @@
   top: 0;
   right: 0;
   z-index: $front + 10000;
-  background-color:rgba(255,255,255, 1);
+  background-color: rgba(255, 255, 255, 1);
 }
 
 .toast-manager {
