--- a/src/styles/components/tabSection.scss
+++ b/src/styles/components/tabSection.scss
@@ -1,28 +1,30 @@
 .tab-section {
-  .tab-content{
-    border-top:2px solid $primary;
+  .tab-content {
+    border-top: 2px solid $primary;
   }
 
-  .nav-item{
+  .nav-item {
     // width:100px;
-    text-align:center;
-    margin-left:0.313em;
+    text-align: center;
+    margin-left: 0.313em;
     background-color: $dark-grey;
     color: $secondary;
     border: none;
     font-weight: 500;
 
-    &.active{
+    &.active {
       background-color: $primary !important;
       color: $secondary !important;
       border: none;
     }
   }
 
-  @media (max-width:$break-xs){
-      .nav-item, th, td {
-        font-size: $header-font-min;
-        font-weight: 500;
-      }
+  @media (max-width: $break-xs) {
+    .nav-item,
+    th,
+    td {
+      font-size: $header-font-min;
+      font-weight: 500;
+    }
   }
 }
